# NBA_Betting

./: .env.example  .gitignore  ARCHITECTURE.md  Action_Plan.md  CNAME  Deep_Learning.ipynb  README.md  config.py  deploy_player_game.sh  job_scheduling.md  pyproject.toml  requirements.txt  start_app.py  update_data.py
.devcontainer/: devcontainer.json
airflow_dags/: bank_account_daily_update_dag.py  covers_game_scores_and_odds_daily_update_dag.py  etl_daily_update_dag.py  fivethirtyeight_player_spider_dag.py  nbastats_game_results_inbound_dag.py  nbastats_player_boxscores_inbound_dag.py  nbastats_player_general_inbound_dag.py  odds_api_daily_dag.py  team_538_daily_update.py  team_nbastats_daily_update.py
airflow_dags/daily_update/: covers_game_scores_and_odds_daily_update.py  etl_daily_update.py  odds_api_daily_update.py  predictions_daily_update.py  team_538_daily_update.py  team_nbastats_daily_update.py
airflow_dags/financials/: betting_account_update.py
docs/: Action_Plan.md  CNAME  _config.yml  index.html  job_scheduling.md  player_game_algorithm.py
models/: XGB_CLS_Main_Rank_ZScore  XGB_CLS_main_features_baseline.model  XGB_REG_Main_Rank_ZScore  XGB_REG_main_features_baseline.model  XGB_REG_main_features_hptuned.model
models/AutoML/: Baseline_LR_CLS_PyCaret.pkl  Baseline_Lasso_Reg_PyCaret.pkl  Baseline_Ridge_Reg_PyCaret.pkl  PyCaret_Lasso_main_rank_zscore.pkl  PyCaret_LogReg_Main_Rank_ZScore.pkl  vlastd_Rank_Lasso_Reg_PyCaret.pkl  vlastd_rank_LR_CLS_PyCaret.pkl  vlastd_rank_Ridge_CLS_PyCaret.pkl
notebooks/: 2_AutoML.ipynb  3_AutoKeras.ipynb  3_Game_Record_Setup.ipynb  4_Game_Record_Setup.ipynb  AutoDL_Cls.ipynb  AutoDL_Reg.ipynb  AutoKeras.ipynb  AutoML.ipynb  AutoML_Cls.ipynb  AutoML_Reg.ipynb  Exploratory_Analysis.ipynb  Exploratory_Analysis_OLD.ipynb  Model_Performance.ipynb  NBA_Stats_etl_for_non_current_dates.ipynb  PyCaret_AutoML.ipynb  TEMp.ipynb  V2_EDA.ipynb  combining_historical_data.ipynb  etl_for_non_current_dates.ipynb  game_record_setup.ipynb  mapping.json  nba_ai_advanced.ipynb  nba_ai_autoMLDL.ipynb  nba_ai_deep_learning_base_model.ipynb  nba_ai_eda.ipynb  nba_ai_etl.ipynb  nba_ai_model_eval.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/structured_data_classifier/: oracle.json
notebooks/structured_data_regressor/: graph  oracle.json
scripts/: backfill_predictions.py  generate_model_accuracy_graph.py  generate_vegas_by_week_graph.py  generate_vegas_miss_graph.py  generate_vegas_statistics_graph.py  train_models.py
src/: __init__.py  config.py  database.py  database_orm.py  job_scheduling.md  pipeline.py
src/app/: __init__.py  dashboard.py  web.py
src/bet_management/: bet_decisions.py  bets.py  financials.py  game_records.py
src/betting/: __init__.py  account.py
src/data_feeds/: create_new_data_source.py  data_source_setup.md  data_source_utils.py  data_sources_config.py
src/data_sources/: __init__.py  create_new_data_source.py  data_source_utils.py
src/deployment/: dashboard.py
src/etl/: __init__.py  daily_db_game_record_creation.py  daily_db_game_record_update.py  daily_etl_config.py  daily_etl_creation.py  daily_etl_update.py  feature_creation.py  main_etl.py
src/feature_creation/: feature_creation.py  (+2 more)
(+1052 files in other folders)
